--- a/index.html
+++ b/index.html
@@ -8,45 +8,28 @@
 </head>
 <body>
     <nav>
-        <a class = "navtitle"><span>Learning Game</span></a>
+        <a class = "navtitle"><span style = "color: var(--orange-dark)">LEARNING </span> <span style = "color: var(--orange-light)">GAME</span> </a>
 
         <a href="#about" class = "navbar"><span>About</span></a>
         <a href="#game" class = "navbar"><span>Game</span></a>
         <a href="#info" class = "navbar"><span>Info</span></a>
         
     </nav>
-    <div class = "info" id = "#about">
+    <div class = "info" id = "about">
         <h2>ABOUT</h2>
-        <p>    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id iaculis nisi. Aliquam mattis volutpat nisl, eget mattis purus facilisis ullamcorper. Phasellus dui eros, laoreet semper fringilla sit amet, dapibus ac ligula. Maecenas vel nisl et felis dictum vestibulum. Vivamus ullamcorper elit purus, molestie vehicula metus rutrum nec. Donec ac mi vitae ligula ultricies vulputate et sit amet mi. Nam ullamcorper sem nibh. Aenean lacinia, mi et mattis egestas, justo felis tristique lorem, eget scelerisque odio justo in eros. Nam interdum erat eget odio ultricies, a consequat eros venenatis. Nunc nibh erat, rutrum nec est vitae, vehicula mollis nunc. Pellentesque laoreet aliquam orci nec rutrum.
-
-    Phasellus at vulputate neque. Aliquam erat volutpat. Proin eget sem vel urna finibus imperdiet a nec nulla. Vivamus molestie, sapien ac faucibus malesuada, risus lacus iaculis lacus, vitae tristique purus felis non orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In tempus iaculis dui, viverra ullamcorper justo ornare convallis. Nulla lacinia magna at finibus lobortis. Maecenas ut consequat sapien. Morbi id lacus nisl. In dignissim id libero ut lobortis. Suspendisse lacus lacus, sagittis porta porttitor sit amet, tempor commodo leo. Nunc et lobortis augue. Maecenas ante risus, eleifend condimentum vestibulum dignissim, aliquet quis libero. Sed vitae pharetra nisi, sed efficitur enim.
-
-    Integer at neque euismod, fringilla nisi eu, fermentum urna. Pellentesque lobortis aliquam est, quis volutpat massa posuere in. Cras blandit lectus non velit ornare, ac congue nisi rhoncus. Sed non urna dapibus, suscipit tortor eu, tristique turpis. Suspendisse potenti. Integer non consectetur dui. Proin dapibus fermentum eros. Mauris rutrum, massa in viverra placerat, libero magna varius leo, et elementum mauris augue in lacus. Suspendisse potenti. Aenean aliquam risus eu purus congue, sed maximus mi pellentesque.
-
-    Aliquam erat volutpat. In ut consequat libero, non sagittis nunc. Cras consequat hendrerit semper. Mauris quis tempus lorem, id mattis est. Aliquam sagittis venenatis tortor sit amet bibendum. Proin lorem lorem, pulvinar sit amet orci ut, sollicitudin dapibus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla sed nibh ut magna faucibus ornare vel sed mauris. Mauris quis dapibus mi. Proin egestas id lectus non venenatis. Nullam sed fringilla lectus. Ut faucibus ligula ut lectus hendrerit fringilla.
-
-    Vivamus a augue eget justo rhoncus feugiat. Proin blandit vel lectus ornare finibus. Aenean hendrerit eget leo sit amet blandit. Nullam sit amet pretium turpis. Proin lobortis gravida velit, vitae ultricies nibh aliquet non. Vestibulum eget eros viverra, lobortis purus ac, sodales nunc. Cras a turpis in metus viverra interdum. Sed imperdiet, nibh vitae lacinia imperdiet, arcu lorem lobortis risus, vel molestie sapien erat sed ipsum. Vivamus vel nibh quis justo malesuada tincidunt ac lacinia eros. Maecenas vitae leo eu tortor efficitur iaculis in sit amet arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec ipsum sed nibh facilisis congue. Quisque eleifend dui eget velit gravida, vel lobortis augue gravida.
+        <p>    about
     </p>
-    <div class = "info" id = "#info">
+    <div class = "info" id = "info">
         <h2>INFO</h2>
-        <p>    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id iaculis nisi. Aliquam mattis volutpat nisl, eget mattis purus facilisis ullamcorper. Phasellus dui eros, laoreet semper fringilla sit amet, dapibus ac ligula. Maecenas vel nisl et felis dictum vestibulum. Vivamus ullamcorper elit purus, molestie vehicula metus rutrum nec. Donec ac mi vitae ligula ultricies vulputate et sit amet mi. Nam ullamcorper sem nibh. Aenean lacinia, mi et mattis egestas, justo felis tristique lorem, eget scelerisque odio justo in eros. Nam interdum erat eget odio ultricies, a consequat eros venenatis. Nunc nibh erat, rutrum nec est vitae, vehicula mollis nunc. Pellentesque laoreet aliquam orci nec rutrum.
-
-    Phasellus at vulputate neque. Aliquam erat volutpat. Proin eget sem vel urna finibus imperdiet a nec nulla. Vivamus molestie, sapien ac faucibus malesuada, risus lacus iaculis lacus, vitae tristique purus felis non orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In tempus iaculis dui, viverra ullamcorper justo ornare convallis. Nulla lacinia magna at finibus lobortis. Maecenas ut consequat sapien. Morbi id lacus nisl. In dignissim id libero ut lobortis. Suspendisse lacus lacus, sagittis porta porttitor sit amet, tempor commodo leo. Nunc et lobortis augue. Maecenas ante risus, eleifend condimentum vestibulum dignissim, aliquet quis libero. Sed vitae pharetra nisi, sed efficitur enim.
-
-    Integer at neque euismod, fringilla nisi eu, fermentum urna. Pellentesque lobortis aliquam est, quis volutpat massa posuere in. Cras blandit lectus non velit ornare, ac congue nisi rhoncus. Sed non urna dapibus, suscipit tortor eu, tristique turpis. Suspendisse potenti. Integer non consectetur dui. Proin dapibus fermentum eros. Mauris rutrum, massa in viverra placerat, libero magna varius leo, et elementum mauris augue in lacus. Suspendisse potenti. Aenean aliquam risus eu purus congue, sed maximus mi pellentesque.
-
-    Aliquam erat volutpat. In ut consequat libero, non sagittis nunc. Cras consequat hendrerit semper. Mauris quis tempus lorem, id mattis est. Aliquam sagittis venenatis tortor sit amet bibendum. Proin lorem lorem, pulvinar sit amet orci ut, sollicitudin dapibus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla sed nibh ut magna faucibus ornare vel sed mauris. Mauris quis dapibus mi. Proin egestas id lectus non venenatis. Nullam sed fringilla lectus. Ut faucibus ligula ut lectus hendrerit fringilla.
-
-    Vivamus a augue eget justo rhoncus feugiat. Proin blandit vel lectus ornare finibus. Aenean hendrerit eget leo sit amet blandit. Nullam sit amet pretium turpis. Proin lobortis gravida velit, vitae ultricies nibh aliquet non. Vestibulum eget eros viverra, lobortis purus ac, sodales nunc. Cras a turpis in metus viverra interdum. Sed imperdiet, nibh vitae lacinia imperdiet, arcu lorem lobortis risus, vel molestie sapien erat sed ipsum. Vivamus vel nibh quis justo malesuada tincidunt ac lacinia eros. Maecenas vitae leo eu tortor efficitur iaculis in sit amet arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec ipsum sed nibh facilisis congue. Quisque eleifend dui eget velit gravida, vel lobortis augue gravida.
-    </p>
+        <p>    info </p>
     </div>
     <div id="game-container">
         <div id="blocks">
-            <div class="draggable" draggable="true">Block 1</div>
-            <div class="draggable" draggable="true">Block 2</div>
-            <div class="draggable" draggable="true">Block 3</div>
+            <div class="draggable">Block 1</div>
+            <div class="draggable">Block 2</div>
+            <div class="draggable">Block 3</div>
         </div>
-        <div id="drop-zone">Drop Here</div>
+        <div id="drop-zone"></div>
     </div>
     <script src="script.js"></script>
     
