kinda works now

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="drop-zone"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
     
 </body>
 </html>
