works now ACTUALLY doing cosmetics

--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
     </nav>
     <div class = "info" id = "about">
         <h2>ABOUT</h2>
-        <p>    about
-    </p>
+        <p>    about</p>
     <div class = "info" id = "info">
         <h2>INFO</h2>
         <p>    info </p>
     </div>
     <div id="game-container">
         <div id="blocks">
-            <div class="draggable">Block 1</div>
-            <div class="draggable">Block 2</div>
-            <div class="draggable">Block 3</div>
+            <div class="draggable">a</div>
+            <div class="draggable">b</div>
+            <div class="draggable">c</div>
         </div>
-        <div id="drop-zone"></div>
+        <div class="drop-zone"></div>
+        <div class="drop-zone"></div>
+        <div class="drop-zone"></div>
     </div>
     <script src="script.js" type="module"></script>
     
