moved stuff, draw grid

--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
         <div class="drop-zone"></div>
         <div class="drop-zone"></div>
     </div>
-    <script src="dragGame.js" type="module"></script>
+    <script src="dragGame/dragGame.js" type="module"></script>
 
     <div class="game-container">
         <canvas id = "click-canvas" width = "1920" height = "1080"></canvas>
     </div>
-    <script src="countGame.js" type="module"></script>
+    <script src="countGame/countGame.js" type="module"></script>
+    <div class="game-container">
+        <canvas id = "stick-canvas" width = "1920" height = "1080"></canvas>
+    </div>
+    <script src="stickGame/stickGame.js" type="module"></script>
 </body>
 </html>
