--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>INFO</h2>
         <p>    info </p>
     </div>
-    <div class="game-container" id="dragging-game">
+    <!-- <div class="game-container" id="dragging-game">
         <div id="blocks">
             <div class="draggable">a</div>
             <div class="draggable">b</div>
@@ -32,14 +32,14 @@
         <div class="drop-zone"></div>
         <div class="drop-zone"></div>
     </div>
-    <script src="dragGame/dragGame.js" type="module"></script>
+    <script src="dragGame/dragGame.js" type="module"></script> -->
 
-    <div class="game-container">
-        <canvas id = "click-canvas" width = "1920" height = "1080"></canvas>
+    <!-- <div class="game-container">
+        <canvas id = "click-canvas" width = "1280" height = "720"></canvas>
     </div>
-    <script src="countGame/countGame.js" type="module"></script>
+    <script src="countGame/countGame.js" type="module"></script> -->
     <div class="game-container">
-        <canvas id = "stick-canvas" width = "1920" height = "1080"></canvas>
+        <canvas id = "stick-canvas" width = "1280" height = "720"></canvas>
     </div>
     <script src="stickGame/stickGame.js" type="module"></script>
 </body>
